@@ -1,2 +1,11 @@
 # Today I Learned
  
+## java 17
+* [strictfp 키워드 사라짐.](practice-java-syntax/java-17/src/main/java/jep306/README.md)
+* [공통 인터페이스가 추가되었고, 새로운 PRNG(의사 난수 생성기) 구현으로 LXM 알고리즘이 추가됨](practice-java-syntax/java-17/src/main/java/jep356/README.md)
+* [java2D 관련 macOS 렌더링 파이프라인이 추가됨](practice-java-syntax/java-17/src/main/java/jep382/README.md)
+* [macOS에서 Rosetta 2 안써도 되도록 포팅](practice-java-syntax/java-17/src/main/java/jep391/README.md)
+* [deprecated 됬던 api 삭제](practice-java-syntax/java-17/src/main/java/jep398/README.md)
+* [JDK 내부에 접근할 수 있는 `--illegal-access`를 더이상 허용하지 않음](practice-java-syntax/java-17/src/main/java/jep403/README.md)
+* [패턴 switch문이 추가됨](practice-java-syntax/java-17/src/main/java/jep406/README.md)
+* [RMI activation 삭제됨](practice-java-syntax/java-17/src/main/java/jep407/README.md)
